# r-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/r_mcp/: __init__.py  __main__.py  client.py  server.py
src/r_mcp/tools/: __init__.py  advanced_stats_tools.py  analysis_tools.py  clustering_tools.py  data_tools.py  distribution_tools.py  eda_tools.py  execution_tools.py  ggplot_tools.py  interactive_tools.py  proportion_tools.py  regression_tools.py  stats_tools.py  timeseries_tools.py  viz_tools.py
